--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -21,6 +21,7 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp">
 
+
     <android.support.constraint.Guideline
         android:id="@+id/horizontalHalf"
         android:layout_width="wrap_content"
@@ -67,8 +68,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonB" />
 
-    <!--TODO (1): Replace the Composer ImageView with a SimpleExoPlayerView that occupies the top half of your screen.-->
-    <ImageView
+    <!--TODO DONE(1): Replace the Composer ImageView with a SimpleExoPlayerView that occupies the top half of your screen.-->
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/composerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
